# mandelbrot-wasm

./: .gitignore  Cargo.toml  README.md  index.html  minimal.html
scripts/: build.sh
src/: canvas.rs  fractal_core.rs  lib.rs  mandelbrot.rs  palette.rs  perturbation.rs
src/perturbation/: delta.rs  mod.rs  reference.rs  series.rs  session.rs  stability.rs
www/: app.js  explorer-host.js  minimal.js
