[package]
name = "mandelbrot-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Danny <dannywilsonn5@gmail.com>"]
description = "Interactive Mandelbrot set explorer rendered in WebAssembly"
license = "MIT"
repository = "https://github.com/dannysecurity/mandelbrot-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "MouseEvent",
    "WheelEvent",
    "Element",
    "HtmlElement",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
